--- a/MdeicalStoreApplication/MedicalStore/Views/Home/About.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Home/About.cshtml
@@ -87,17 +87,15 @@
                 <img src="~/Images/1.jpg" class="cover" />
                 <img src="~/Images/Abdallah1.jpeg" class="me" />
                 <h3>Abdallah Farag</h3>
-                <p class="jop">Full Stack .Net Developer</p>
+                <p class="jop">Team leader</p>
                 <p class="myinfo">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-                    reprehenderit voluptates voluptas deleniti nulla! Molestiae?
+                    Full stack .net developer
                 </p>
                 <ul class="so">
                     <li><i class="fab fa-google"></i></li>
                     <li><i class="fab fa-linkedin"></i></li>
                     <li><i class="fab fa-github-alt"></i></li>
                 </ul>
-                <a href="#"> <button class="btn mybtn">Download CV</button></a>
             </div>
             <div class="card col-lg-3 col-md-4 col-xs-12" data-aos="flip-left">
                 <img src="~/Images/1.jpg" class="cover" />
