--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link href="~/Content/animate.css" rel="stylesheet" />
     <link href="~/Content/slick.css" rel="stylesheet" />
     <link href="~/Content/main_styles.css" rel="stylesheet" />
+    <link href="~/Content/newHome.css" rel="stylesheet" />
     <link href="~/Content/responsive.css" rel="stylesheet" />
     <link href="~/Content/all.css" rel="stylesheet" />
     <link href="~/Content/jquery-ui.css" rel="stylesheet" />
@@ -267,7 +268,7 @@
                     </div>
                     <div class="col-lg-2">
                         <div class="footer_column">
-                            <div class="footer_title">Links</div>
+                            <div class="footer_title">Sections</div>
                             <ul class="footer_list">
 
                                 <li>@Html.ActionLink("Home", "index", "home")</li>
